# sqlmodel-issue

./: README.md  main.py  pyproject.toml
models/: hero.py  team.py
