[tool.poetry]
name = "sqlmodel-issue"
version = "0.1.0"
description = ""
authors = ["bjarnthoregilsson <bjarnthoregilsson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.4"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
